--- a/cadastro.html
+++ b/cadastro.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/cadastro.css">
+    
 </head>
 <body>
     <main>
@@ -24,7 +25,7 @@
 
             <button class="botao">Salvar</button>
 
-            <a href="#">Já possuo conta</a>
+            <a href="./index.html">Já possuo conta</a>
 
 
         </div>
