--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             <a href="#">Esqueci minha senha</a>
 
-            <a href="#">Criar nova conta</a>
+            <a href="./cadastro.html">Criar nova conta</a>
 
 
         </div>
